# clean-n-clear

./: .env.example  LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
Prompt Optimiser/: .env.example  .gitignore  GUIDE.md  README.md  config.yaml  criteria.md  main.py  prompt-optimizer-spec.md  pyproject.toml  requirements.txt  seed_prompts.json
Prompt Optimiser/guides/: gemini-prompting.md
Prompt Optimiser/optimizer/: __init__.py  clients.py  graph.py  schemas.py
Prompt Optimiser/optimizer/nodes/: __init__.py  engineer.py  executor.py  grader.py  recorder.py
app/: globals.css  layout.tsx  page.tsx
app/api/analyze/: route.ts
app/auth/: page.tsx
app/results/: page.tsx
app/scan/: page.tsx
components/: FaceCapture.tsx  PreferenceForm.tsx  RegionBanner.tsx  SafetyDisclaimer.tsx
lib/analysis/: skinAnalysis.ts
lib/constants/: products.ts  routine-products.ts
lib/firebase/: client.ts
lib/images/: prepareImageForAnalysis.ts
lib/recommendations/: products.ts  routine.ts  validateProductCatalog.ts
lib/storage/: routines.ts
lib/types/: skincare.ts
