[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "Closed-loop optimizer for the Gemini prompts in lib/analysis/skinAnalysis.ts"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "openai>=1.92",
    "google-genai>=1.0",
    "pandas>=2.0",
    "pydantic>=2.6",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["optimizer", "optimizer.nodes"]
